# review-app

./: dockerfile  pyproject.toml
.github/: lint.yml
backend/: db.sqlite3  pyproject.toml
backend/config/: settings.py
backend/reviewdb/: models.py
backend/reviewdb/migrations/: 0001_initial.py  0002_employee_currency_employee_currency_currency_and_more.py
backend/secrets/: postgresdb_secret_key.json
backend/src/: Dockerfile  pyproject.toml
backend/src/config/: settings.py  urls.py
backend/src/reviewdb/: admin.py  apps.py  models.py  serializer.py  views.py
backend/src/reviewdb/migrations/: 0003_rename_increase_suggestion_increasesuggestion_and_more.py  0004_remove_employee_currency_currency_and_more.py  0005_datasetlist.py  0006_remove_datasetlist_schema_and_more.py
config/: settings.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: App.js  Header.js  Sidebar.js
frontend/src/components/maincontent/: EmployeeContent.css  EmployeeContent.js  Overview.js  Reconciliation.js  SalarySuggestion.js
frontend/src/components/maincontent/Reconciliation/: Reconciliation.css  Reconciliation.js
frontend/src/services/: APIEmployee.js
frontend/src/utils/: DragAndDrop.js  DropZone.js  ReconciliationResultTable.js  TablePagination.css  TablePagination.js  csvExport.js  uriSerialized.js
